Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -3215,7 +3215,7 @@
   editor       = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett}
 }
 @article{Piaget_1964,
-  title        = {Part I: Cognitive Development in Children: Development and Learning},
+  title        = {Cognitive Development in Children: Development and Learning},
   author       = {Piaget, Jean},
   year         = 1964,
   month        = {Sep},
