--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -1,7 +1,7 @@
 In the past decade, deep learning has established itself as state-of-the-art technology in various automatic image analysis tasks.
 Despite impressive results, this technology has several limitations, notably its limited robustness to noise, constrained transformation invariance during object recognition and reliance on a substantial amount of training data.
 Conversely, the human brain does not suffer from these limitations due to its non-sequential processing of extracted image features and its ability to perceive visual scenes holistically, i.e. interpret it as more than the sum of its part, as outlined by Gestalt psychology.
-This capability stems from the brain's capacity to establish internal consistency between each connected cell pair through self-organisation and localised learning processes, i.e. a consensus is achieved across all features through mutual cell support. This mechanism solves the problem of ``early commitment'' inherent in deep networks as they rely on a global error correction algorithm to establish consistency at a single point between prediction and teaching signal.
+This capability stems from the brain's ability to establish internal consistency between each connected cell pair through self-organisation and localised learning, i.e. a consensus is achieved across all features through mutual cell support. This mechanism solves the problem of ``early commitment'' inherent in deep networks as they rely on a global error correction algorithm to establish consistency at a single point between prediction and teaching signal.
 
 This thesis builds upon these insights and proposes a novel image-processing framework inspired by the human brain's functionality.
 Accordingly, a significant part of this thesis is devoted to identifying and interpreting neuroscientific findings.
