--- a/tex/experiments.tex
+++ b/tex/experiments.tex
@@ -73,7 +73,7 @@ This means the initial activation is used as a probability value, and its binary
     \figlbl{result_filter}
 \end{figure}
 
-In \figref{result_filter}, the filter response of these four filters applied to the images from the training dataset is shown.
+The filter response of these four filters applied to the images from the training dataset is shown in \figref{result_filter}.
 Please note that a fixed threshold of $0.5$ instead of a Bernoulli neuron is used to make this figure appear visually less noisy.
 For each type of line, one filter specialising in this line has a strong response, almost reassembling the input image (except extending the line by a few pixels).
 The other filters primarily activate around the endpoints of the lines.
