--- a/tex/results.tex
+++ b/tex/results.tex
@@ -236,7 +236,7 @@ In conclusion, using one of the two self-support weight initialisation strategie
     \figlbl{support_strength}
 \end{figure}
 %
-In \figref{support_strength}, the support strength received by active and inactive cells during training is presented, before the activation strength is normalised and translated into an activation probability.
+In \figref{support_strength}, the support strength received by active and inactive cells during training is presented before the activation strength is normalised and translated into an activation probability.
 The green interval depicts the support with inhibition and the blue interval without inhibition.
 
 Before training, only self-support exists, i.e. the received support for active cells is $1$.
