--- a/zotero2.bib
+++ b/zotero2.bib
@@ -1,4 +1,19 @@
 
+@article{buetti-dinh_deep_2019,
+	title = {Deep neural networks outperform human expert's capacity in characterizing bioleaching bacterial biofilm composition},
+	volume = {22},
+	issn = {2215-017X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S2215017X18301954},
+	doi = {10.1016/j.btre.2019.e00321},
+	pages = {e00321},
+	journaltitle = {Biotechnology Reports},
+	shortjournal = {Biotechnology Reports},
+	author = {Buetti-Dinh, Antoine and Galli, Vanni and Bellenberg, Sören and Ilie, Olga and Herold, Malte and Christel, Stephan and Boretska, Mariia and Pivkin, Igor V. and Wilmes, Paul and Sand, Wolfgang and Vera, Mario and Dopson, Mark},
+	urldate = {2023-08-18},
+	date = {2019-06},
+	langid = {english},
+}
+
 @incollection{hu_regenerating_2021,
 	location = {Cham, Switzerland},
 	title = {Regenerating Soft Robots Through Neural Cellular Automata},
