--- a/sources_corrected.bib
+++ b/sources_corrected.bib
@@ -1,3 +1,18 @@
+@article{buetti-dinh_deep_2019,
+	title = {Deep neural networks outperform human expert's capacity in characterizing bioleaching bacterial biofilm composition},
+	volume = {22},
+	issn = {2215-017X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S2215017X18301954},
+	doi = {10.1016/j.btre.2019.e00321},
+	pages = {e00321},
+	journaltitle = {Biotechnology Reports},
+	shortjournal = {Biotechnology Reports},
+	author = {Buetti-Dinh, Antoine and Galli, Vanni and Bellenberg, Sören and Ilie, Olga and Herold, Malte and Christel, Stephan and Boretska, Mariia and Pivkin, Igor V. and Wilmes, Paul and Sand, Wolfgang and Vera, Mario and Dopson, Mark},
+	urldate = {2023-08-18},
+	date = {2019-06},
+	langid = {english},
+}
+
 
 @incollection{hu_regenerating_2021,
 	location = {Cham, Switzerland},
@@ -834,12 +849,11 @@
 }
 
 @article{piaget_part_1964,
-	title = {Part I: Cognitive development in children: Piaget development and learning},
+	title = {Cognitive development in children: Piaget development and learning},
 	volume = {2},
 	issn = {0022-4308},
 	url = {https://onlinelibrary.wiley.com/doi/10.1002/tea.3660020306},
 	doi = {10.1002/tea.3660020306},
-	shorttitle = {Part I},
 	pages = {176--186},
 	number = {3},
 	journaltitle = {Journal of Research in Science Teaching},
